Fix code top spacing on tablet and desktop

--- a/_sass/tablet.scss
+++ b/_sass/tablet.scss
@@ -11,6 +11,7 @@
 .code-title {
   float: right;
   top: $leading-body1 + 2px; //2 borders of 1px
+  margin-top: -$leading-body1 - 2px;
   right: 16px;
   padding: 0 8px;
 }
